--- a/contact.html
+++ b/contact.html
@@ -12,22 +12,10 @@
     <i class="fas fa-chevron-left"></i>
     </a>
     <div class="contact-form">
-        <h1 class=title>Me contacter :</h1>
-        <div class="txtb">
-          <label>Prénom :</label>
-          <input type="text" name="" value="" placeholder="Entrez votre prénom/pseudonyme">
-        </div>
-
-        <div class="txtb">
-          <label>Email :</label>
-          <input type="email" name="" value="" placeholder="Entrez votre Email">
-        </div>
-
-        <div class="txtb">
-          <label>Message :</label>
-          <textarea></textarea>
-        </div>
-        <a class="btn">Envoyer</a>
+        <form action="mailto:paul.rives@devoirs.com" method="post" enctype="text/plain">
+          <h1 class=title>Vous pouvez me contacter par mail ci-dessous:</h1>
+            <input class="btn" type="submit" value="Contacter par mail">
+        </form>
       </div>
   </body>
 </html>
